--- a/notes.org
+++ b/notes.org
@@ -30,6 +30,8 @@ https://bbs.archlinux.org/viewtopic.php?pid=1928690#p1928690.
 ** C# (csharp):
 *** Commands:
 - [[https://learn.microsoft.com/en-us/dotnet/core/tools/dotnet-nuget-why][~dotnet nuget why~]] - Dependency graph.
+*** Tools:
+- [[https://dotnetfiddle.net/][C# repl]].
 *** C# Learning notes.
 
 A good chunk of most courses are about how to program in general and OO concepts in particular. I'd suggest a schedule something like:
@@ -48,6 +50,7 @@ The DI stuff is pretty key
 - [[https://github.com/milanm/DotNet-Developer-Roadmap][Github: .NET Developer Roadmap 2025]] - This is a step-by-step guide
   to becoming a .NET Engineer, with links to relevant learning
   resources.
+- [[https://code.visualstudio.com/docs/csharp/debugging][VSCode: C# debugging]]
 *** C# Microsoft Learn Courses:
 - [[https://learn.microsoft.com/en-us/training/paths/design-business-continuity-solutions/?source=docs&tab=applied-skills-tab&ns-enrollment-type=Collection&ns-enrollment-id=bookmarks][AZ-305: Design business continuity solutions]] - 2 modules1 hr 46 min
 - [[https://learn.microsoft.com/en-us/training/paths/design-identity-governance-monitor-solutions/?source=docs&tab=applied-skills-tab&ns-enrollment-type=Collection&ns-enrollment-id=bookmarks][AZ-305: Design identity, governance, and monitor solutions]] - 3 modules3 hr 5 min
