--- a/notes.org
+++ b/notes.org
@@ -1593,6 +1593,18 @@ to an item of a source code.
 #+END_QUOTE
 
 - https://itnext.io/ast-for-javascript-developers-3e79aeb08343
+*** [[https://nextjs.org/docs][Next.js]] (React Framework):
+Next.js is a React framework for building full-stack web
+applications. You use React Components to build user interfaces, and
+Next.js for additional features and optimizations.
+
+Under the hood, Next.js also abstracts and automatically configures
+tooling needed for React, like bundling, compiling, and more. This
+allows you to focus on building your application instead of spending
+time with configuration.
+
+- App Router: New. Latest React Features (Server Components/Streaming).
+- Pages Router: Old. Bespoke Server-rendered React apps.
 ** UI Testing:
 *** [[https://playwright.dev/][playwright]]:
 ~playwright~ is a modern equivalent to [[https://www.selenium.dev][Selenium]]. Benefits include:
