--- a/notes.org
+++ b/notes.org
@@ -1330,6 +1330,54 @@ processes running in the same namespace. Either:
 - ~export DOCKER_CONTENT_TRUST=1~ to enable.
 - Verifies the integrity, authenticity, and publication date of all Docker
   images from the Docker Hub registry, by preventing access to unsigned images.
+*** Caching go dependencies between builds:
+- See: [[https://docs.docker.com/reference/dockerfile/#example-cache-go-packages][Docker Docs: Cache go packages]]
+
+  #+BEGIN_EXAMPLE dockerfile
+    FROM golang:1.25-alpine AS delve
+    RUN go install github.com/go-delve/delve/cmd/dlv@v1.25.2
+
+    FROM golang:1.25-alpine AS build
+    WORKDIR /app
+    # Cache Go modules, then pull in code to avoid invalidating layer.
+    # https://docs.docker.com/reference/dockerfile/#example-cache-go-packages
+    COPY go.* .
+    RUN --mount=type=cache,target=/root/.cache/go-build go mod download
+    COPY .  .
+    RUN --mount=type=cache,target=/root/.cache/go-build go build -gcflags="all=-N -l" -o app-debug ./cmd
+
+    FROM build AS final
+    COPY --from=delve /go/bin/dlv /usr/local/bin/dlv
+    WORKDIR /app
+    EXPOSE 8001 50000
+    ENV PORT=8001
+    ENTRYPOINT ["dlv", "exec", "--headless", "--continue", "--listen=:50000", "--accept-multiclient", "--api-version=2", "/app/app-debug"]
+  #+END_EXAMPLE
+*** Caching pnpm dependencies between builds:
+- See: [[https://pnpm.io/docker][PNPM: Docker]]
+
+  #+BEGIN_EXAMPLE dockerfile
+    FROM node:20-slim AS base
+    ENV PNPM_HOME="/pnpm"
+    ENV PATH="$PNPM_HOME:$PATH"
+    RUN corepack enable
+    COPY . /app
+    WORKDIR /app
+
+    FROM base AS prod-deps
+    RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --prod --frozen-lockfile
+
+    FROM base AS build
+    RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
+    RUN pnpm run build
+
+    FROM base
+    COPY --from=prod-deps /app/node_modules /app/node_modules
+    COPY --from=build /app/dist /app/dist
+    EXPOSE 8000
+    CMD [ "pnpm", "start" ]
+  #+END_EXAMPLE
+
 ** Clean-up:
 - Nuclear remove everything:
 
